v.1.3.1 - z-index issue
git-svn-id: https://plugins.svn.wordpress.org/pixgridder/trunk@826193 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/gridder.css
+++ b/css/gridder.css
@@ -64,6 +64,10 @@ a, button, input {
 	top: 0;
 	width: 100%;
 }
+.wp-dialog.pix-dialog .ui-dialog-titlebar-close:before {
+	content: ''!important;
+	display: none!important;
+}
 .wp-dialog.pix-dialog .ui-dialog-titlebar-close:hover {
 	font-size: 17px!important;
 	-webkit-transform: rotate(90deg);
@@ -594,7 +598,7 @@ a, button, input {
 	display: none;
 }
 .wp-dialog.pix-dialog.pix-page-builder {
-	z-index: 50!important;
+	z-index: 100!important;
 }
 
 #pix_loader_iframe {
